--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 
 <body>
 
-	<h1>You got this!  Good luck.</h1>
+	<div class="menu-content">
+		<h1>S&J</h1>
+		<nav>
+			<a href="#">Home</a>
+			<a href="#">Services</a>
+			<a href="#">Contact</a>
+		</nav>
+	</div>
 
 <!-- Menu Content 
 S&J
