Created new less files and moved the styles I had done into corisponding less files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+	<div class='container'>
 	<div class="menu-content">
 		<h1>S&J</h1>
 		<nav>
@@ -20,14 +20,30 @@
 			<a href="#">Contact</a>
 		</nav>
 	</div>
+	<div class="home-page">
+		<div class="home-page-intro">
+			<img src="img/home/home-jumbotron.png" alt="Futuristic building">
+			<h1>Integrity,<br/>
+				Excellence,<br/>
+				Progress.</h1>
+		</div>
+		<div class="preview">
+			<section class="about-home">
+				<h3>Smith & Jones Architects</h3>
+				<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
+				<div class="btn">Learn More</div>
+				<img src="img/home/home-img-1.png" alt="floor plans">
+			</section>
+			<section class="designs-home">
+				<img src="img/home/home-img-2.png" alt="parallel buildings with water between them">
+				<h3>Futuristic Designs</h3>
 
-<!-- Menu Content 
-S&J
-
-Home
-Services
-Contact
--->
+				<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem</p>
+					
+				<div class="btn">View Designs</div>
+			</section>
+		</div>
+	</div>
 
 
 <!-- Home Page Content:
@@ -98,6 +114,7 @@ San Diego, CA 22345
 
 Copyright © 2018 Smith and Jones
 -->
+	</div>
 	<script src="js/index.js"></script>
 </body>
 </html>
