finished adding less files, fixed nav up a bit, imported less files, and fixed home page

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body>
 	<div class='container'>
 	<div class="menu-content">
-		<h1>S&J</h1>
 		<nav>
+			<h1>S&J</h1>
 			<a href="#">Home</a>
 			<a href="#">Services</a>
 			<a href="#">Contact</a>
 		</nav>
 	</div>
-	<div class="home-page">
-		<div class="home-page-intro">
-			<img src="img/home/home-jumbotron.png" alt="Futuristic building">
+	<div class="home-page-intro">
+			<img class="header-pic" src="img/home/home-jumbotron.png" alt="Futuristic building">
 			<h1>Integrity,<br/>
 				Excellence,<br/>
 				Progress.</h1>
 		</div>
+	<div class="home-page">
 		<div class="preview">
 			<section class="about-home">
 				<h3>Smith & Jones Architects</h3>
