Added nav to contact and services, started styling footer, imported footer.less, added more to my home pg

--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,16 @@
 </head>
 
 <body>
-
-	<h1>Contact</h1>
+	<div class='container'>
+		<div class="menu-content">
+			<nav>
+				<h1>S&J</h1>
+				<a href="index.html">Home</a>
+				<a href="services.html">Services</a>
+				<a href="contact.html">Contact</a>
+			</nav>
+		</div>
+		<h1>Contact</h1>
 
 <!-- Contactd Us Content 
   Contact Us
@@ -55,7 +63,7 @@ San Diego, CA 22345
 702 555 0144
 
 -->
-
+	</div>
 	<script src="js/index.js"></script>
 </body>
 </html>
