--- a/services.html
+++ b/services.html
@@ -11,7 +11,15 @@
 </head>
 
 <body>
-
+		<div class='container'>
+			<div class="menu-content">
+				<nav>
+					<h1>S&J</h1>
+					<a href="index.html">Home</a>
+					<a href="services.html">Services</a>
+					<a href="contact.html">Contact</a>
+				</nav>
+			</div>
 	<h1>Services</h1>
 
 <!-- Services Content 
@@ -32,7 +40,7 @@
 
 
 -->
-
+</div>
 	<script src="js/index.js"></script>
 </body>
 </html>
