--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 	<div class="menu-content">
 		<nav>
 			<h1>S&J</h1>
-			<a href="#">Home</a>
-			<a href="#">Services</a>
-			<a href="#">Contact</a>
+			<a href="index.html">Home</a>
+			<a href="services.html">Services</a>
+			<a href="contact.html">Contact</a>
 		</nav>
 	</div>
 	<div class="home-page-intro">
-			<img class="header-pic" src="img/home/home-jumbotron.png" alt="Futuristic building">
+			<img class="intro-pic" src="img/home/home-jumbotron.png" alt="Futuristic building">
 			<h1>Integrity,<br/>
 				Excellence,<br/>
 				Progress.</h1>
@@ -43,56 +43,37 @@
 				<div class="btn">View Designs</div>
 			</section>
 		</div>
+		<div class="recent-projects">
+			<h3>Recent Projects</h3>
+			<section class='villa'>
+				<img src="img/home/home-villas-img.png" alt="Villa">
+				<h2>THE VILLAS</h2>
+				<p>The Villas bring to the table win-win survival strategies to ensureproactive domination. At the end of the day, going forward, a new normal thathas evolved from generation X is on the runway heading towards a streamlinedcloud solution.</p>	
+				<p>Capitalize on low hanging fruit to identify a ballpark value addedactivity to beta test. Override the digital divide with additionalclickthroughs from DevOps. Nanotechnology immersion along the informationhighway will close the loop on focusing solely on the bottom line.</p>
+			</section>
+			<section class='outskirts'>
+				<img src="img/home/home-outskirts-img.png" alt="Buildings in water">
+				<h2>OUTSKIRTS</h2>
+				<p>The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. </p>
+				<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+			</section>
+			<section class="blocks">
+				<img src="img/home/home-the-blocks-img.png" alt="Colorful Apartment buildings">
+				<h2>THE BLOCKS</h2>
+				<p>The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. </p>
+				<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+			</section>
+		</div>
 	</div>
+	<footer>
+		<p>Interested in starting a project?</p> 
+		<p>Let’s talk:</p>
+		<input type='text' value='Enter email'>
+		<p>We'll never share your email with anyone else.</p>
+	</footer>
 
-
-<!-- Home Page Content:
-	
-Integrity,
-Excellence,
-Progress.
-
-Smith & Jones Architects
-
-Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem 
-
-Learn More
-
-Futuristic Designs
-
-Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem 
-
-View Designs
-
-Recent Projects
-
-THE VILLAS
-
-The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
-
-Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-
-OUTSKIRTS
-
-The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
-
-Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-
-THE BLOCKS
-
-The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
-
-Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-
--->
 
 <!-- FOOTER CONTENT
-Interested in starting a project?  
-Let’s talk:
-
-Enter email
-
-We'll never share your email with anyone else.
 
 New York
 123 Lane
