Finished styling my footer and added it to all three pages

--- a/services.html
+++ b/services.html
@@ -40,6 +40,36 @@
 
 
 -->
+
+<footer>
+		<div class="footer-content">
+			<div class="input">
+				<p>Interested in starting a project?</p> 
+				<p>Let’s talk:</p>
+				<input type='text' value='Enter email'>
+				<p>We'll never share your email with anyone else.</p>
+			</div>
+			<address>New York<br/>
+				123 Lane<br/>
+				Suite 100<br/>
+				Albany, NY 12345<br/>
+				202 555 0144</address>
+			<address>Florida<br/>
+				Ocean Drive<br/>
+				Suite 201<br/>
+				Orlando, FL 22345<br/>
+				502 555 0144</address>
+			<address>California<br/>
+				Mountain Street<br/>
+				Suite 105<br/>
+				San Diego, CA 22345<br/>
+				702 555 0144</address>
+			
+		</div>
+		<div class="copyright">
+			<p>Copyright © 2018 Smith and Jones</p>
+		</div>
+	</footer>
 </div>
 	<script src="js/index.js"></script>
 </body>
