--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class='container'>
 	<div class="menu-content">
 		<nav>
-			<h1>S&J</h1>
+			<h1>S&amp;J</h1>
 			<a href="index.html">Home</a>
 			<a href="services.html">Services</a>
 			<a href="contact.html">Contact</a>
@@ -28,19 +28,22 @@
 		</div>
 	<div class="home-page">
 		<div class="preview">
-			<section class="about-home">
+			<section class="about">
+
 				<h3>Smith & Jones Architects</h3>
 				<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
-				<div class="btn">Learn More</div>
-				<img src="img/home/home-img-1.png" alt="floor plans">
+				<a href="#"><div class="btn">Learn More</div></a>
 			</section>
-			<section class="designs-home">
-				<img src="img/home/home-img-2.png" alt="parallel buildings with water between them">
+			<img class="about-pic" src="img/home/home-img-1.png" alt="floor plans">
+			<img class="design-pic" src="img/home/home-img-2.png" alt="parallel buildings with water between them">
+			<section class="designs">
+				
 				<h3>Futuristic Designs</h3>
 
 				<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem</p>
 					
-				<div class="btn">View Designs</div>
+				<a href="#"><div class="btn">View Designs</div>
+				</a>
 			</section>
 		</div>
 		<div class="recent-projects">
@@ -73,25 +76,25 @@
 				<input type='text' value='Enter email'>
 				<p>We'll never share your email with anyone else.</p>
 			</div>
-			<address>New York<br/>
-				123 Lane<br/>
+			<address><h5>New York</h5>
+				<p>123 Lane<br/>
 				Suite 100<br/>
 				Albany, NY 12345<br/>
-				202 555 0144</address>
-			<address>Florida<br/>
-				Ocean Drive<br/>
+				202 555 0144</p></address>
+			<address><h5>Flordia</h5>
+				<p>Ocean Drive<br/>
 				Suite 201<br/>
 				Orlando, FL 22345<br/>
-				502 555 0144</address>
-			<address>California<br/>
-				Mountain Street<br/>
+				502 555 0144</p></address>
+			<address><h5>California</h5>
+				<p>Mountain Street<br/>
 				Suite 105<br/>
 				San Diego, CA 22345<br/>
-				702 555 0144</address>
+				702 555 0144</p></address>
 			
 		</div>
 		<div class="copyright">
-			<p>Copyright © 2018 Smith and Jones</p>
+			<p>Copyright &copy; 2018 Smith and Jones</p>
 		</div>
 	</footer>
 	</div>
