--- a/contact.html
+++ b/contact.html
@@ -12,14 +12,28 @@
 
 <body>
 	<div class='container'>
-		<div class="menu-content">
-			<nav>
-				<h1>S&J</h1>
-				<a href="index.html">Home</a>
-				<a href="services.html">Services</a>
-				<a href="contact.html">Contact</a>
+			<nav class="navContainerClosed">
+					<div class="navClosed">
+						<p class="navLogo">S&J</p>
+					</div>
+					<div class="navIcon open"></div>
 			</nav>
-		</div>
+			
+			<nav class="navContainerOpen hidden">
+				<div class="navOpen">
+					<nav class="navContainerClosed">
+						<div class="navClosed">
+							<p class="navLogo">S&J</p>
+						</div>
+					<div class="navIcon closed"></div>
+					</nav>
+					<div class="menu-items">
+						<a href="/index.html" class="nav-item">Home</a>
+						<a href="/services.html" class="nav-item">Services</a>
+						<a href="#" class="nav-item">Contact</a>
+					</div>
+				</div>
+			</nav>
 		<h1>Contact</h1>
 
 <!-- Contactd Us Content 
@@ -94,5 +108,6 @@ San Diego, CA 22345
 	</footer>
 	</div>
 	<script src="js/index.js"></script>
+	
 </body>
 </html>
