--- a/services.html
+++ b/services.html
@@ -12,14 +12,29 @@
 
 <body>
 		<div class='container'>
-			<div class="menu-content">
-				<nav>
-					<h1>S&J</h1>
-					<a href="index.html">Home</a>
-					<a href="services.html">Services</a>
-					<a href="contact.html">Contact</a>
+				<nav class="navContainerClosed">
+						<div class="navClosed">
+							<p class="navLogo">S&J</p>
+						</div>
+						<div class="navIcon open"></div>
 				</nav>
-			</div>
+				
+				<nav class="navContainerOpen hidden">
+					<div class="navOpen">
+						<nav class="navContainerClosed">
+							<div class="navClosed">
+								<p class="navLogo">S&J</p>
+							</div>
+						<div class="navIcon closed"></div>
+						</nav>
+						<div class="menu-items">
+							<a href="index.html" class="nav-item">Home</a>
+							<a href="services.html" class="nav-item">Services</a>
+							<a href="#" class="nav-item">Contact</a>
+						</div>
+					</div>
+				</nav>
+			
 			<div class="services-intro">
 				<img class="intro-pic" src="img/services/services-jumbotron.png" alt="Looking up at a glass building">
 				<h1>Services</h1>
@@ -73,7 +88,8 @@
 							
 							<img class="card-img" src="img/services/services-tab-sustainability-img.png" alt="Floor plans">
 		
-						</div>
+					</div>
+			
 		</div>
 	<footer>
 		<div class="footer-content">
